--- a/.env.example
+++ b/.env.example
@@ -13,12 +13,22 @@ DB_USER=postgres
 DB_PASSWORD=your_password
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=project_db
+DB_NAME=wardrobe_db
 CORS_ORIGIN=http://localhost:3000
+
+## AWS S3 Configuration (for image uploads)
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-bucket-name
 
 ## Python Engine Environment
 OPENAI_API_KEY=your_openai_api_key
 PYTHON_ENGINE_PORT=5001
+
+## Image Processing
+MAX_FILE_SIZE=10485760
+ALLOWED_IMAGE_TYPES=jpg,jpeg,png,webp
 
 ## Deployment (Vercel)
 VERCEL_ENV=production
