--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "pg": "^8.8.0",
-    "axios": "^1.3.0"
+    "axios": "^1.3.0",
+    "multer": "^1.4.5-lts.1",
+    "aws-sdk": "^2.1400.0",
+    "sharp": "^0.32.0",
+    "uuid": "^9.0.0",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
