--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "axios": "^1.3.0"
+    "axios": "^1.3.0",
+    "three": "^r148",
+    "@react-three/fiber": "^8.13.0",
+    "@react-three/drei": "^9.75.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "aws-sdk": "^2.1400.0"
   },
   "devDependencies": {
     "react-scripts": "5.0.1",
