--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "axios": "^1.3.0",
-    "three": "^r148",
+    "three": "^0.148.0",
     "@react-three/fiber": "^8.13.0",
     "@react-three/drei": "^9.75.0",
     "react-dnd": "^16.0.1",
