--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,21 @@
   "description": "React frontend for project website",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "axios": "^1.3.0",
-    "three": "^0.148.0",
-    "@react-three/fiber": "^8.13.0",
     "@react-three/drei": "^9.75.0",
+    "@react-three/fiber": "^8.13.0",
+    "aws-sdk": "^2.1400.0",
+    "axios": "^1.3.0",
+    "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "aws-sdk": "^2.1400.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
+    "three": "^0.151.3"
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
+    "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/jest-dom": "^5.16.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
